RESOLVED FIXED199660
Fix build after Foundation changes UIEdgeInsets definition
https://bugs.webkit.org/show_bug.cgi?id=199660
Summary Fix build after Foundation changes UIEdgeInsets definition
Alex Christensen
Reported 2019-07-09 23:37:03 PDT
Fix build after Foundation changes UIEdgeInsets definition
Attachments
Patch (1.92 KB, patch)
2019-07-09 23:37 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-07-09 23:37:38 PDT
Alex Christensen
Comment 2 2019-07-09 23:37:40 PDT
WebKit Commit Bot
Comment 3 2019-07-10 10:17:23 PDT
Comment on attachment 373823 [details] Patch Clearing flags on attachment: 373823 Committed r247308: <https://trac.webkit.org/changeset/247308>
WebKit Commit Bot
Comment 4 2019-07-10 10:17:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.