Fix build after Foundation changes UIEdgeInsets definition https://bugs.webkit.org/show_bug.cgi?id=199660 <rdar://problem/52390453>

Patch by Alex Christensen <achristensen@webkit.org> on 2019-07-10
Reviewed by Tim Horton.

* UIProcess/API/Cocoa/WKUIDelegatePrivate.h:
* UIProcess/Cocoa/WKWebViewContentProvider.h:

Canonical link: https://commits.webkit.org/213551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247308 268f45cc-cd09-0410-ab3c-d52691b4dbfc